# pipeline_relacionados

./: .gitignore  README.md  hello.py  pyproject.toml
src/: main.py
src/lib/classes/: colettor_xml.py  commun_finctions.py  commun_functions.py  connection_api_google.py  generate_date.py  leitura_de_arquivo.py
src/lib/pipelines/: gerar_novos_documentos_relacionados.py  gerar_novos_relacionados.py
